--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>MathSockets</title>
-    <link rel="stylesheet" href="/css/master.css" type="text/css" media="screen" charset="utf-8">
+    <link href="/css/master.css" rel="stylesheet" type="text/css" media="screen" charset="utf-8">
   </head>
-  <body>
-    hej
-  </body>
+  <body></body>
+  <script src="/js/lib/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/lib/markdown.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/socket.io/socket.io.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/js/script.js" type="text/javascript" charset="utf-8"></script>
 </html>
